--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,11 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="indicator_size">3dp</dimen>
+    <dimen name="selected_indicator_size">4dp</dimen>
+    <!-- TODO
+    This will change the height but the UI needs to be customized.-->
+<!--    <dimen name="design_bottom_navigation_height" tools:override="true">80dp</dimen>-->
+
 </resources>
