--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+<!--
     <style name="display_lar">
         <item name="android:textSize">57sp</item>
         <item name="android:letterSpacing">0</item>
@@ -78,7 +79,7 @@
     <style name="body_small_">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">#000000</item>
-    </style>
+    </style>-->
 
     <!--  ###### -->
     <style name="you_re_read">
@@ -99,11 +100,31 @@
         <item name="android:textColor">@color/colorSubtitle</item>
     </style>
 
-    <style name="buttonText_in_fragment" parent="TextAppearance.MaterialComponents.Body1">
+    <style name="button_text_in_fragment" parent="TextAppearance.MaterialComponents.Body1">
         <item name="android:textSize">16sp</item>
         <item name="android:lineSpacingExtra">0sp</item>
         <item name="android:textColor">?colorOnPrimary</item>
 
+    </style>
+
+    <style name="action_button1" parent="Widget.MaterialComponents.TextView">
+        <item name="android:background">@drawable/common_rounded_square_action</item>
+        <item name="android:textAppearance">@style/button_text_in_fragment</item>
+        <item name="android:padding">28dp</item>
+        <item name="android:minEms">5</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+
+    <style name="action_button2" parent="Widget.MaterialComponents.TextView">
+        <item name="android:background">@drawable/common_rounded_square_action</item>
+        <item name="android:textAppearance">@style/button_text_in_fragment</item>
+        <item name="android:minEms">7</item>
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:paddingStart">28dp</item>
+        <item name="android:paddingEnd">28dp</item>
+        <item name="android:gravity">center</item>
     </style>
 
 
