--- a/app/src/main/res/layout/fragment_guide_frame_vp2.xml
+++ b/app/src/main/res/layout/fragment_guide_frame_vp2.xml
@@ -42,6 +42,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:text="Got It!"
+                android:onClick="@{() -> viewModel.onGotItClicked()}"
                 android:visibility="@{viewModel.showAction?View.VISIBLE:View.GONE}"
                 app:layout_constraintBottom_toBottomOf="@+id/textView6"
                 app:layout_constraintEnd_toEndOf="parent"
