-idle -> connecting transition added -connecting animation added

--- a/app/src/main/res/drawable/ic_success.xml
+++ b/app/src/main/res/drawable/ic_success.xml
@@ -1,9 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="34dp"
+    android:height="34dp"
+    android:viewportWidth="34"
+    android:viewportHeight="34">
+
+  <group android:name="rotation"
+      android:pivotX="17"
+      android:pivotY="17"
+      android:rotation="0.0">
   <path
-      android:pathData="M21.63,1.202C21.236,0.906 20.644,0.906 20.249,1.399L17.388,4.95C15.81,3.865 13.936,3.273 11.864,3.273C6.439,3.273 2,7.712 2,13.137C2,18.562 6.439,23 11.864,23C17.29,23 21.729,18.562 21.729,13.137C21.729,11.164 21.137,9.389 20.15,7.81L19.46,8.599L18.769,9.389L13.048,16.589C12.851,16.786 12.555,16.983 12.259,16.983C11.963,16.983 11.766,16.885 11.568,16.687L7.327,12.15C7.031,11.854 7.031,11.361 7.129,11.065C7.129,10.967 7.228,10.868 7.327,10.769C7.721,10.375 8.313,10.375 8.708,10.769L12.16,14.517L17.586,7.712L18.178,6.923L18.769,6.134L21.63,2.583C22.123,2.188 22.123,1.596 21.63,1.202Z"
+      android:name="path"
+      android:pathData="M17,0.333C7.8,0.333 0.333,7.8 0.333,17C0.333,26.2 7.8,33.667 17,33.667C26.2,33.667 33.667,26.2 33.667,17C33.667,7.8 26.2,0.333 17,0.333ZM12.483,24.15L6.5,18.167C5.85,17.517 5.85,16.467 6.5,15.817C7.15,15.167 8.2,15.167 8.85,15.817L13.667,20.617L25.133,9.15C25.783,8.5 26.833,8.5 27.483,9.15C28.133,9.8 28.133,10.85 27.483,11.5L14.833,24.15C14.2,24.8 13.133,24.8 12.483,24.15Z"
       android:fillColor="#000000"/>
+  </group>
+
+
 </vector>
