--- a/app/src/main/res/drawable/ic_explore.xml
+++ b/app/src/main/res/drawable/ic_explore.xml
@@ -3,10 +3,23 @@
     android:height="33dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:pathData="M12,2C6.5,2 2,6.5 2,12C2,17.5 6.5,22 12,22C17.5,22 22,17.5 22,12C22,6.5 17.5,2 12,2Z"
-      android:fillColor="@color/colorIconSecondary"/>
-  <path
-      android:pathData="M16,8C15.7,7.7 15.3,7.6 15,7.8L11.4,9C10.2,9.4 9.4,10.2 9,11.4L7.8,15C7.7,15.4 7.8,15.7 8,16C8.2,16.2 8.4,16.3 8.7,16.3C8.8,16.3 8.9,16.3 9,16.2L12.6,15C13.7,14.6 14.6,13.7 15,12.6L16.2,9C16.3,8.7 16.2,8.3 16,8Z"
-      android:fillColor="@color/colorIconPrimary"/>
+
+  <group
+      android:name="out" >
+    <path
+        android:name="out_1"
+        android:pathData="M12,2C6.5,2 2,6.5 2,12C2,17.5 6.5,22 12,22C17.5,22 22,17.5 22,12C22,6.5 17.5,2 12,2Z"
+        android:fillColor="@color/colorIconSecondary"/>
+  </group>
+
+  <group
+      android:name="in"
+      android:pivotX="12"
+      android:pivotY="12"
+      android:rotation="0.0" >
+    <path
+        android:pathData="M16,8C15.7,7.7 15.3,7.6 15,7.8L11.4,9C10.2,9.4 9.4,10.2 9,11.4L7.8,15C7.7,15.4 7.8,15.7 8,16C8.2,16.2 8.4,16.3 8.7,16.3C8.8,16.3 8.9,16.3 9,16.2L12.6,15C13.7,14.6 14.6,13.7 15,12.6L16.2,9C16.3,8.7 16.2,8.3 16,8Z"
+        android:fillColor="@color/colorIconPrimary"/>
+  </group>
+
 </vector>
