--- a/app/src/main/res/layout/fragment_connect_scene_initial_state.xml
+++ b/app/src/main/res/layout/fragment_connect_scene_initial_state.xml
@@ -21,6 +21,7 @@
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="64dp"
             android:src="@drawable/ic_explore"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -30,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/fragConnect_explore_pri"
+            android:text="@string/frag_connect_explore_pri"
             android:textAppearance="@style/title_in_fragment"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -40,36 +41,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/fragConnect_you_re_read"
+            android:text="@string/frag_connect_you_re_read"
             android:textAppearance="@style/subtitle_in_fragment"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/vp_2_guide"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="24dp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/vp2_indicator"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/vp2_indicator"
-            android:layout_width="0dp"
+        <include
+            layout="@layout/include_fragment_connect_actions"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:padding="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:tabBackground="@drawable/tab_pager_selector"
-            app:tabGravity="center"
-            app:tabIndicatorHeight="0dp"
-            app:tabMode="fixed"
-            app:tabPadding="0dp" />
+            app:viewModel="@{viewModel}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
