--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -5,11 +5,7 @@
     android:id="@+id/mobile_navigation"
     app:startDestination="@+id/navigation_connect">
 
-    <fragment
-        android:id="@+id/navigation_connect"
-        android:name="com.example.torwitharti.ui.home.ConnectFragment"
-        android:label="@string/nav_connect"
-        tools:layout="@layout/fragment_connect" />
+    <include app:graph="@navigation/connect_navigation"/>
 
     <fragment
         android:id="@+id/navigation_dashboard"
