--- a/app/src/main/res/layout/fragment_connect_scene_connecting_state.xml
+++ b/app/src/main/res/layout/fragment_connect_scene_connecting_state.xml
@@ -15,37 +15,40 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="16dp"
         tools:context=".ui.home.ConnectFragment">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/iv_connect_status_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="128dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/av_loading_rotate" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tv_connect_status_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/frag_connect_connecting_to_network"
             android:textAppearance="@style/title_in_fragment"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/iv_connect_status_icon" />
 
         <com.google.android.material.progressindicator.LinearProgressIndicator
+            android:id="@+id/progress_connecting"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
-            android:progress="50"
+            tools:progress="50"
+            android:progress="@{viewModel.connectingProgress}"
             app:indicatorColor="@color/colorProgress1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/tv_connect_status_title"
             app:trackColor="@color/colorProgress2"
             app:trackCornerRadius="16dp"
             app:trackThickness="12dp" />
