--- a/app/src/main/res/layout/fragment_connect_scene_guide_state.xml
+++ b/app/src/main/res/layout/fragment_connect_scene_guide_state.xml
@@ -15,35 +15,37 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="16dp"
         tools:context=".ui.home.ConnectFragment">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/iv_connect_status_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_explore"
+            android:layout_marginTop="64dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tv_connect_status_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/frag_connect_explore_pri"
             android:textAppearance="@style/title_in_fragment"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/iv_connect_status_icon" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tv_connect_status_subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/frag_connect_you_re_read"
             android:textAppearance="@style/subtitle_in_fragment"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_connect_status_title" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vp_2_guide"
@@ -54,7 +56,7 @@
             app:layout_constraintBottom_toTopOf="@+id/vp2_indicator"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_connect_status_subtitle" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/vp2_indicator"
