--- a/app/src/main/res/layout/include_fragment_connect_actions.xml
+++ b/app/src/main/res/layout/include_fragment_connect_actions.xml
@@ -13,44 +13,43 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:animateLayoutChanges="true"
         android:paddingTop="16dp"
         android:paddingBottom="16dp">
 
         <ImageButton
-            android:id="@+id/imageView2"
+            android:id="@+id/iv_globe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:alpha="@{viewModel.switchToConnectingScene?(0.4f):(1f)}"
             android:background="@drawable/common_round_action"
             android:clickable="@{viewModel.switchToConnectingScene}"
             android:focusable="@{viewModel.switchToConnectingScene}"
             android:onClick="@{()->viewModel.globPressed()}"
             android:src="@drawable/ic_globe"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/textView3"
+            app:layout_constraintEnd_toStartOf="@+id/tv_connect_action_btn"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
 
-            android:id="@+id/imageView3"
+            android:id="@+id/iv_apps"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:alpha="@{viewModel.switchToConnectingScene?(0.4f):(1f)}"
             android:background="@drawable/common_round_action"
             android:clickable="true"
             android:focusable="true"
             android:onClick="@{()->viewModel.appsPressed()}"
             android:src="@drawable/ic_apps"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_globe"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toTopOf="@+id/imageView2" />
+            app:layout_constraintStart_toEndOf="@+id/tv_connect_action_btn"
+            app:layout_constraintTop_toTopOf="@+id/iv_globe" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tv_connect_action_btn"
             style="@style/action_button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -58,11 +57,11 @@
             android:focusable="true"
             android:onClick="@{()->viewModel.mainActionButtonClicked()}"
             android:text="@{viewModel.mainActionButtonTitle}"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-            app:layout_constraintEnd_toStartOf="@+id/imageView3"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_globe"
+            app:layout_constraintEnd_toStartOf="@+id/iv_apps"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
-            app:layout_constraintTop_toTopOf="@+id/imageView2"
+            app:layout_constraintStart_toEndOf="@+id/iv_globe"
+            app:layout_constraintTop_toTopOf="@+id/iv_globe"
             tools:text="@string/frag_connect_connect" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
