--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -111,6 +111,12 @@
         <item name="android:textSize">16sp</item>
         <item name="android:lineSpacingExtra">0sp</item>
         <item name="android:textColor">?colorOnPrimary</item>
+    </style>
+
+    <style name="label_text_in_fragment" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineSpacingExtra">5sp</item>
+        <item name="android:textColor">?colorOnPrimary</item>
 
     </style>
 
@@ -124,7 +130,8 @@
     <style name="action_button1" parent="Widget.MaterialComponents.TextView">
         <item name="android:background">@drawable/common_rounded_square_action</item>
         <item name="android:textAppearance">@style/button_text_in_fragment</item>
-        <item name="android:padding">28dp</item>
+        <item name="android:paddingTop">28dp</item>
+        <item name="android:paddingBottom">28dp</item>
         <item name="android:minEms">7</item>
         <item name="android:gravity">center</item>
     </style>
