--- a/app/src/main/res/layout/fragment_app_routing.xml
+++ b/app/src/main/res/layout/fragment_app_routing.xml
@@ -32,6 +32,7 @@
             android:text="@string/lorem_ipsum_medium" />
 
         <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/smProtectAllApps"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/common_rounded_square_action"
