--- a/app/src/main/res/layout/fragment_app_routing.xml
+++ b/app/src/main/res/layout/fragment_app_routing.xml
@@ -43,22 +43,14 @@
             android:textAppearance="@style/button_text_in_fragment"
             />
 
-
-        <TextView
-            android:id="@+id/tvAppsTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/compact_padding"
-            android:textAppearance="@style/paragraph_title"
-            android:text="@string/app_routing_tor_apps" />
-
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvTorApps"
+            android:id="@+id/rvAppList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            tools:listitem="@layout/app_item_view"
+            android:orientation="vertical"
+            tools:listitem="@layout/app_switch_item_view"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             />
+
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
