--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -114,6 +114,13 @@
 
     </style>
 
+    <style name="list_item_style" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineSpacingExtra">0sp</item>
+        <item name="android:textColor">?colorOnPrimary</item>
+
+    </style>
+
     <style name="action_button1" parent="Widget.MaterialComponents.TextView">
         <item name="android:background">@drawable/common_rounded_square_action</item>
         <item name="android:textAppearance">@style/button_text_in_fragment</item>
