--- a/app/src/main/res/layout/app_item_view.xml
+++ b/app/src/main/res/layout/app_item_view.xml
@@ -1,6 +1,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
-      <variable name="viewModel" type="com.example.torwitharti.ui.approuting.AppItemModel"/>
+      <variable name="viewModel" type="com.example.torwitharti.ui.approuting.model.AppItemModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
