--- a/app/src/main/res/layout/fragment_app_routing.xml
+++ b/app/src/main/res/layout/fragment_app_routing.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.torwitharti.ui.approuting.AppRoutingViewModel" />
+            type="com.example.torwitharti.ui.approuting.model.AppRoutingViewModel" />
         <import type="android.view.View" />
     </data>
 
