-Mostly error screen experimentation with motion layout -Some custom icons created

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
 
     <color name="colorProgress1">#14000000</color>
     <color name="colorProgress2">#0A000000</color>
+
+
+    <color name="colorInfoErrorCollapsedSubtitle">#66000000</color>
 </resources>
