--- a/app/src/main/res/layout/include_fragment_connect_actions.xml
+++ b/app/src/main/res/layout/include_fragment_connect_actions.xml
@@ -39,8 +39,8 @@
             android:layout_height="wrap_content"
             android:alpha="@{viewModel.switchToConnectingScene?(0.4f):(1f)}"
             android:background="@drawable/common_round_action"
-            android:clickable="@{viewModel.switchToConnectingScene}"
-            android:focusable="@{viewModel.switchToConnectingScene}"
+            android:clickable="true"
+            android:focusable="true"
             android:onClick="@{()->viewModel.appsPressed()}"
             android:src="@drawable/ic_apps"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
